# gitstar-ssh

./: .env  .gitignore  Procfile  REAME.md  SSHServer.hs  gitstar-ssh.cabal  gitstarSsh.hs  grapit.rb  id_rsa  id_rsa.pub
gitstar-ssh-web/: .env  Gemfile  Procfile  README.md  config.ru  grapit.rb
