Name:           gitstar-ssh
Version:        0.1.2
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAILS team
Maintainer:     Amit Levy <levya at cs.stanford dot edu>, Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       Gitstar ssh service
Category:       Web
Cabal-Version:  >= 1.6

Description:
        This module exports a ssh server that handles git requests.

Executable gitstarSsh
  Main-is: gitstarSsh.hs
  ghc-options: -Wall -fno-warn-orphans
  build-depends: base >= 4.5 && < 5,
                 regex-posix,
                 mongoDB,
                 bson,
                 binary,
                 base64-bytestring,
                 bytestring,
                 iterIO,
                 process,
                 filepath,
                 ssh,
                 mtl
